...
    func show(quiz result: QuizResultsViewModel) {

        let alert = AlertModel(title: result.title, message: result.text, buttonText: result.buttonText)
            {[weak self] _ in
                self?.presenter.restartGame()
            }
        let alertPresenter = AlertPresenter(controller: self, accessibilityIdentifier: "Quiz result")
        alertPresenter.showAlert(alert: alert)
    }
}

